fixed hero z-index bug

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -178,7 +178,6 @@ header .navbar {
   background-color:#60aff2; 
   padding-top: 30px; 
   padding-bottom: 30px;
-  position: relative;
 }
 
 .sign-up-box h3 { 
